feat: 接通 Spring 集成、配置中心模块化并发布 1.0.0
- Spring Boot 集成端到端接通：自动注册 LogbackSpringAdapter，registry 经
  ObjectProvider 收集所有 LoggingSystemAdapter Bean；启动 additive 应用
  dynamic-log.levels（不冲掉 Boot 的 logging.level.*）
- 配置中心拆为按需引入的独立模块（core 保持纯净）：
  - dynamic-log-apollo：真注册 Apollo ConfigChangeListener
  - dynamic-log-nacos：监听 Spring Cloud EnvironmentChangeEvent 触发刷新
  移除 dynamic-log-spring 中未接线的死代码监听器与 Listener 自动配置
- 新增官方可选插件：dynamic-log-log4j2（Log4j2 适配器）、
  dynamic-log-plugin-ttl（临时级别+TTL 自动回滚）、
  dynamic-log-endpoint（REST 端点）、dynamic-log-plugin-audit（审计）
- 修复：JDK1.8 兼容（Stream.toList）、插件 destroy 生命周期、
  DefaultPluginManager 线程安全、Logback null level 守卫
- 全链路补充详细 DEBUG 日志；集成测试覆盖新接线
- groupId com.dynamiclog -> io.github.xiangganluo；版本 1.0.0
- 官网站(docs) + README 同步